Compucom CCQA/src/objects/Configuration_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Backlog_Date__c</fullName>
        <label>Backlog Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpenStages__c</fullName>
        <label>OpenStages Unused Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Choose the Fiscal Year for Backlog calculation</description>
        <inlineHelpText>This is Help text</inlineHelpText>
        <label>Stage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TerritoryModel__c</fullName>
        <inlineHelpText>The Territory Model is used as the basis for displaying Opportunities in the Organizational Hierarchy for Revenue Planning</inlineHelpText>
        <label>TerritoryModel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FCST Configuration Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Configuration Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Configuration Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>